--- a/monitor/devops.html
+++ b/monitor/devops.html
@@ -12,6 +12,7 @@
   <div class="content">
     <div class="item">
       <img src="./img/devops/1.png" />
+      <div class="statusTitle"></div>
       <div class="status"></div>
     </div>
     <div class="split left">
@@ -19,22 +20,24 @@
     </div>
     <div class="item">
       <img src="./img/devops/2.png" />
+      <div class="statusTitle"></div>
       <div class="status"></div>
     </div>
     <div class="split left">
       <div class="line"><div class="arrow"></div></div>
     </div>
     <div class="item">
-      <img src="./img/devops/3.png" />
+      <img src="./img/devops/5.png" />
+      <div class="statusTitle"></div>
       <div class="status"></div>
     </div>
-    <div class="split left">
+   <!-- <div class="split left">
       <div class="line"><div class="arrow"></div></div>
-    </div>
-    <div class="item">
+    </div>-->
+    <!--<div class="item">
       <img src="./img/devops/4.png" />
       <div class="status"></div>
-    </div>
+    </div>-->
   </div>
   <div class="content down clear">
     <div class="split down">
@@ -42,15 +45,16 @@
     </div>
   </div>
   <div class="content" style="direction: rtl">
-    <div class="item">
+   <!-- <div class="item">
       <img src="./img/devops/5.png" />
       <div class="status" style="direction:ltr"></div>
-    </div>
-    <div class="split right">
+    </div>-->
+    <!--<div class="split right">
       <div class="line"><div class="arrow"></div></div>
-    </div>
+    </div>-->
     <div class="item">
       <img src="./img/devops/6.png" />
+      <div class="statusTitle" style="direction:ltr"></div>
       <div class="status" style="direction:ltr"></div>
     </div>
     <div class="split right">
@@ -58,6 +62,7 @@
     </div>
     <div class="item">
       <img src="./img/devops/7.png" />
+      <div class="statusTitle" style="direction:ltr"></div>
       <div class="status" style="direction:ltr"></div>
     </div>
     <div class="split right">
@@ -65,6 +70,7 @@
     </div>
     <div class="item">
       <img src="./img/devops/8.png" />
+      <div class="statusTitle" style="direction:ltr"></div>
       <div class="status" style="direction:ltr"></div>
     </div>
   </div>
@@ -75,119 +81,185 @@
     var zabbix_server = new $.jqzabbix()
     // 先登录获取zabbix的auth
     zabbix_server.userLogin()
-    zabbix_server.queryData('item.get', {
-        // 'groupids': [groupid],
-        'application': 'build_info', // 只查询Network的应用集  //构建
-        'selectGroups': ['构建-部署-测试'], // 同时查出所属的主机组信息
-        'selectHosts': ['构建部署一体化'], // 同时查出所属主机的信息
-        'active': 1, // 只返回属于受监控主机的启用的触发器
-        'output': ['itemid', 'hosts', 'key_', 'name', 'lastvalue']
-    }, function(res) {
-        console.log('build_info-----',res);
-        var lastValueArray=[];
-        var arr = res.result;
-        if(res.result.length>0){
-            arr.map(item=>{
-                if(item.lastvalue!=''){
-                lastValueArray.push(item)
+    getNewData();
+    setInterval(getNewData,10000);
+    function getNewData(){
+        zabbix_server.queryData('item.get', {
+            // 'groupids': [groupid],
+            'application': 'build_info', // 只查询Network的应用集  //构建
+            'selectGroups': ['构建-部署-测试'], // 同时查出所属的主机组信息
+            'selectHosts': ['构建部署一体化'], // 同时查出所属主机的信息
+            'active': 1, // 只返回属于受监控主机的启用的触发器
+            'output': ['itemid', 'hosts', 'key_', 'name', 'lastvalue']
+        }, function(res) {
+            var lastValueArray=[];
+            var arr = res.result;
+            if(arr.length>0){
+                arr.map(item=>{
+                    if(item.lastvalue!=''){
+                        lastValueArray.push(item)
+                    }
+                })
             }
-        })
-        }
-        if(lastValueArray.length==0){
-            updateLog(2, '未执行', 'wait')
-        }else{
-            var str ='';
-            var state='';
-            lastValueArray.map(item=>{
-                if(item.name.indexOf('状态')>-1){
-                  state = item.lastvalue;
-                }
-            if(state!='0'&&state!=0&&state!='') {
-                if (item.name.indexOf('tag') > -1) {
-                    str = str + item.lastvalue + '</br>';
-                }
-                if (item.name.indexOf('时间') > -1) {
-                    str = str + item.lastvalue;
-                }
-                updateLog(2, str, state);
+            if(lastValueArray.length==0){
+                updateLog(2, '构建','未执行', 'wait')
             }else{
-                updateLog(2, '未执行', 'wait')
-            }
-            });
+                var str ='';
+                var state='';
+                lastValueArray.map(item=>{
+                    if(item.name.indexOf('状态')>-1){
+                        state = item.lastvalue;
+                    }
+                    if(state!='0'&&state!=0&&state!='') {
+                        if (item.name.indexOf('tag') > -1) {
+                            str = str + item.lastvalue + '</br>';
+                        }
+                        if (item.name.indexOf('时间') > -1) {
+                            str = str + item.lastvalue;
+                        }
+                        updateLog(2, '构建', str, state);
+                    }else{
+                        updateLog(2, '构建','未执行', 'wait')
+                    }
+                });
 
-        }
-        updateLog(1, '', 'success')
-        /*updateLog(2, '自动化构建执行已成功', 'success')
-        updateLog(3, '自动化测试执行已成功', 'success')*/
-        updateLog(4, '', 'wait')
-        updateLog(5, '', 'wait')
-        updateLog(6, '', 'wait')
-        updateLog(7, '', 'wait')
-        updateLog(8, '', 'wait')
-    });
-    zabbix_server.queryData('item.get', {
-        // 'groupids': ['92'],
-        'application': 'auto_info', // 只查询Network的应用集 //自动化测试
-        'selectGroups': ['构建-部署-测试'], // 同时查出所属的主机组信息
-        'selectHosts': ['构建部署一体化'], // 同时查出所属主机的信息
-        'active': 1, // 只返回属于受监控主机的启用的触发器
-        'output': ['itemid', 'hosts', 'key_', 'name', 'lastvalue']
-    }, function(res) {
-        console.log('auto_info-----',res);
-        var lastValueArray=[];
-        var arr = res.result;
-        if(res.result.length>0){
-          arr.map(item=>{
-              if(item.lastvalue!=''){
-                lastValueArray.push(item)
             }
-          })
-        }
-        if(lastValueArray.length==0){
-            updateLog(3, '未执行', 'wait')
-        }else{
-            var str ='';
-            var state='';
-            lastValueArray.map(item=>{
-                if(item.name.indexOf('状态')>-1){
-                   state = item.lastvalue;
+            updateLog(1, '提交', '','success')
+            updateLog(4, '发布','', 'wait')
+        });
+        zabbix_server.queryData('item.get', {
+            // 'groupids': ['92'],
+            'application': 'auto_info', // 只查询Network的应用集 //自动化测试
+            'selectGroups': ['构建-部署-测试'], // 同时查出所属的主机组信息
+            'selectHosts': ['构建部署一体化'], // 同时查出所属主机的信息
+            'active': 1, // 只返回属于受监控主机的启用的触发器
+            'output': ['itemid', 'hosts', 'key_', 'name', 'lastvalue']
+        }, function(res) {
+            var lastValueArray=[];
+            var arr = res.result;
+            if(arr.length>0){
+                arr.map(item=>{
+                    if(item.lastvalue!=''){
+                        lastValueArray.push(item)
+                    }
+                })
             }
-            if(state!='0'&&state!=0&&state!=''){
-                if(item.name.indexOf('tag')>-1){
-                    str =str+ 'tag:'+item.lastvalue+'</br>';
-                }
-                if(item.name.indexOf('总数')>-1){
-                    str =str+ ' sum:'+item.lastvalue;
-                }
-                if(item.name.indexOf('成功')>-1){
-                    str =str+ ' suc:'+item.lastvalue;
-                }
-                if(item.name.indexOf('失败')>-1){
-                    str =str+ ' fai:'+item.lastvalue+'</br>';
-                }
-                if(item.name.indexOf('时间')>-1){
-                    str =str+ ' time:'+item.lastvalue;
-                }
-                updateLog(3, str, state)
+            if(lastValueArray.length==0){
+                updateLog(3, '自动化测试','未执行', 'wait')
             }else{
-                updateLog(3, '未执行', 'wait')
-            }
-           });
+                var str ='';
+                var state='';
+                lastValueArray.map(item=>{
+                    if(item.name.indexOf('状态')>-1){
+                        state = item.lastvalue;
+                    }
+                    if(state!='0'&&state!=0&&state!=''){
+                        if(item.name.indexOf('tag')>-1){
+                            str =str+ 'tag:'+item.lastvalue+'</br>';
+                        }
+                        if(item.name.indexOf('总数')>-1){
+                            str =str+ ' sum:'+item.lastvalue;
+                        }
+                        if(item.name.indexOf('成功')>-1){
+                            str =str+ ' suc:'+item.lastvalue;
+                        }
+                        if(item.name.indexOf('失败')>-1){
+                            str =str+ ' fai:'+item.lastvalue+'</br>';
+                        }
+                        if(item.name.indexOf('时间')>-1){
+                            str =str+ ' time:'+item.lastvalue;
+                        }
+                        updateLog(3, '自动化测试',str, state)
+                    }else{
+                        updateLog(3, '自动化测试','未执行', 'wait')
+                    }
+                });
 
-        }
-        updateLog(1, '', 'success')
-        /*updateLog(2, '自动化构建执行已成功', 'success')
-        updateLog(3, '自动化测试执行已成功', 'success')*/
-        updateLog(4, '', 'wait')
-        updateLog(5, '', 'wait')
-        updateLog(6, '', 'wait')
-        updateLog(7, '', 'wait')
-        updateLog(8, '', 'wait')
-    });
-    function updateLog(step, log, type) {
+            }
+            updateLog(1, '提交','', 'success')
+            updateLog(4, '发布','', 'wait')
+        });
+        zabbix_server.queryData('item.get', {
+            // 'groupids': ['92'],
+            'application': 'deploy_info', // 只查询Network的应用集 //自动化测试
+            'selectGroups': ['构建-部署-测试'], // 同时查出所属的主机组信息
+            'selectHosts': ['构建部署一体化'], // 同时查出所属主机的信息
+            'active': 1, // 只返回属于受监控主机的启用的触发器
+            'output': ['itemid', 'hosts', 'key_', 'name', 'lastvalue']
+        }, function(res) {
+            var lastValueArrayRelease=[];
+            var lastValueArrayPreRelease=[];
+            var arr = res.result;
+            console.log(88888,arr);
+            if(arr.length>0){
+                arr.map(item=>{
+                    if(item.lastvalue!='' && item.name.indexOf('生产环境部署')>-1){
+                        lastValueArrayRelease.push(item)
+                    }
+                    if(item.lastvalue!='' && item.name.indexOf('staging环境部署')>-1){
+                        lastValueArrayPreRelease.push(item)
+                    }
+                })
+            }
+            if(lastValueArrayPreRelease.length==0){
+                updateLog(5, '预上线','未执行', 'wait')
+            }else{
+                var str ='';
+                var state='';
+                lastValueArrayPreRelease.map(item=>{
+                    if(item.name.indexOf('状态')>-1){
+                        state = item.lastvalue;
+                    }
+                    if(state!='0'&&state!=0&&state!=''){
+                        if(item.name.indexOf('tag')>-1){
+                            str =str+ 'tag:'+item.lastvalue+'</br>';
+                        }
+                        if(item.name.indexOf('状态')>-1){
+                            str =str+ ' fai:'+item.lastvalue+'</br>';
+                        }
+                        updateLog(5, '预上线', str, state)
+                    }else{
+                        updateLog(5, '预上线','未执行', 'wait')
+                    }
+                });
+
+            }
+            if(lastValueArrayRelease.length==0){
+                updateLog(6, '上线','未执行', 'wait')
+            }else{
+                var str ='';
+                var state='';
+                lastValueArrayRelease.map(item=>{
+                    if(item.name.indexOf('状态')>-1){
+                        state = item.lastvalue;
+                    }
+                    if(state!='0'&&state!=0&&state!=''){
+                        if(item.name.indexOf('tag')>-1){
+                            str =str+ 'tag:'+item.lastvalue+'</br>';
+                        }
+                        if(item.name.indexOf('时间')>-1){
+                            str =str+ ' time:'+item.lastvalue;
+                        }
+                        if(item.name.indexOf('状态')>-1){
+                            str =str+ ' fai:'+item.lastvalue+'</br>';
+                        }
+                        updateLog(6, '上线',str, state)
+                    }else{
+                        updateLog(6, '上线','未执行', 'wait')
+                    }
+                });
+
+            }
+            updateLog(1, '提交','', 'success')
+            updateLog(4, '发布','', 'wait')
+
+        });
+    }
+    function updateLog(step, title, log, type) {
         $('.item').each(function(index){
             if (step == index + 1) {
-                $(this).find('.status').html('<img src="./img/devops/' + type + '.png" />' + log)
+                $(this).find('.statusTitle').html('<img src="./img/devops/' + type + '.png" /><span>' + title+'</span>')
+                $(this).find('.status').html(log)
                 var $nextSplit = index === 3 ? $(this).parent().next() : $(this).next()
                 if ($nextSplit) {
                     $nextSplit.find('.line').attr('class', 'line ' + type)
